# route/api/feedback.go
@@ -18,4 +18,5 @@ func InitializeFeedbackHandlerRoute(server *gin.Engine, port, service string) {
 	authGroup.POST("", handler.CreateFeedback)
 	authGroup.PUT("", handler.UpdateFeedback)
 	authGroup.DELETE("", handler.RemoveFeedback)
+	authGroup.GET("/test-grpc", handler.TestGrpcFeedback)
 }
